[package]
name = "motd"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/shell-pool/motd"
authors = ["Ethan Pailes <pailes@google.com>"]
readme = "../README.md"
description = '''
motd interrogates pam_motd.so in order to determine the current
message of the day. It only works on linux and it is a component of
the shpool tool, though you can also use the dump-motd wrapper CLI
tool directly.
'''
license = "Apache-2.0"
keywords = ["motd", "ssh", "terminal", "shell"]

[dependencies]
lazy_static = "1"
libc = "0.2"
log = "0.4"
pam-sys = "0.5"
tempfile = "3"
serde = "1"
serde_derive = "1"
serde_json = "1"
dlopen2 = "0.7.0"
walkdir = "2.5.0"

[build-dependencies]
which = "6"
