[package]
name = "motd"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/shell-pool/motd"
authors = ["Ethan Pailes <pailes@google.com>"]
readme = "../README.md"
description = '''
motd interrogates pam_motd.so in order to determine the current
message of the day. It only works on linux and it is a component of
the shpool tool, though you can also use the dump-motd wrapper CLI
tool directly. Through feature selection, you can also use a
pure rust impl with no dlopen shennigans.
'''
license = "Apache-2.0"
keywords = ["motd", "ssh", "terminal", "shell"]

[features]
default = ["socall"]
socall = ["dep:lazy_static", "dep:libc", "dep:pam-sys", "dep:tempfile",
          "dep:serde_json", "dep:dlopen2", "dep:walkdir"]

[dependencies]
log = "0.4"
serde_derive = "1"
serde = "1"
lazy_static = { version = "1", optional = true }
libc = { version = "0.2", optional = true }
pam-sys = { version = "0.5", optional = true }
tempfile = { version = "3", optional = true }
serde_json = { version = "1", optional = true }
dlopen2 = { version = "0.7.0", optional = true }
walkdir = { version = "2.5.0", optional = true }

[build-dependencies]
which = "6"
